app/assets/stylesheets/application.scss
/* ... */
.table tbody + tbody {
  border-top: 2px solid transparent;
  @include border-color($color-borders);
}

.table .table {
  background-color: transparent;
}

.table-bordered {
  @include border($color-borders);
}

.table-bordered > thead > tr > th,
.table-bordered > tbody > tr > th,
.table-bordered > tfoot > tr > th,
.table-bordered > thead > tr > td,
.table-bordered > tbody > tr > td,
.table-bordered > tfoot > tr > td {
  @include border($color-borders);
}

.table-striped {
  tr:first-child th,
  tr:first-child td {
    border: none !important;
  }
  td,
  th {
    padding: 11px !important;
  }
  border-bottom: none !important;
}


/*------------------------------------------------------------------------------
Structure
------------------------------------------------------------------------------*/
.profile-list{
  margin-top: 6px;
  margin-bottom: 8px;
  margin-right: 8px;
  margin-left: 18px;
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  .profile-item {
    @include background-color($color-selected);  
    @include font-size(12);
    cursor: pointer;
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    gap: 5px;
    width: min-content;
    height: min-content;
    white-space: nowrap;
    padding: 5px 10px 5px 10px;
    border-radius: 5px;
    transition: all 0.2s ease-in-out;

    &:hover {
      @include background-color($color-selected-hover);
      .tooltipText {
        visibility: visible;
        opacity: 1;
      }
    }

    .link-item {
      @include color($theme-color-base);
      text-decoration: none;
    }
    
    .add-icon{
      font-weight: bolder;
      @include font-size(14);
    }

    .tooltipText {
      visibility: hidden;
      width: min-content;
      background-color: #333;
      @include color($theme-color-base);
      text-align: left;
      border-radius: 4px;
      padding: 10px;
      position: absolute;
      z-index: 1;
      bottom: 125%;
      left: 50%;
      transform: translateX(-50%);
      opacity: 0;
      transition: opacity 0.2s ease-in-out;
    }
    .long-text {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: 85px;
    }
  }
}

.no-content-message {
  @include font-size(14);
  @include color($color-contrast-500);
  margin-left: 8px;
  margin-right: 8px;
  margin-bottom: 8px;
}

.disabled-state {
  opacity: 0.7;
  pointer-events: none !important;
}

.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
  max-width: 1170px;
}

.loading-app {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  .logo {
    max-height: 80px;
    max-width: 80px;
    #logo_foreground {
      @include fill($color-logo-foreground);
    }
    #logo_background {
      @include fill($color-logo-background);
    }
  }
}

$search-height: 47px;

.subscribe-promo {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  .subscribe-promo-inner {
    margin-top: 195px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    .remaining-time {
      margin-bottom: base-units(1);
      @include color($color-contrast-600);
    }
    @media (max-height: 450px) {
      margin-top: 120px;
    }
  }
  .entry-selected & {
    display: none;
  }
  .native & {
    display: none;
  }
}

.splash {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  .logo {
    max-height: 80px;
    max-width: 80px;
    #logo_foreground {
      @include fill($color-logo-foreground);
    }
    #logo_background {
      @include fill($color-logo-background);
    }
  }
  .splash-inner {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  .trial-time {
    position: relative;
    top: 48px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    .remaining-time {
      margin-bottom: base-units(1);
      @include color($color-contrast-600);
    }
    .native & {
      display: none;
    }
  }
  .entry-selected & {
    display: none;
  }
}

.app-wrap {
  display: flex;
  overflow: hidden;
  align-items: flex-start;
  height: 100%;
  scrollbar-width: none;
  -ms-overflow-style: none;
  &::-webkit-scrollbar {
    display: none;
  }
  .native & {
    flex: 1;
    padding-top: env(safe-area-inset-top);
  }
  .feeds-column,
  .entries-column {
    flex-grow: 0;
    @include border-right($color-borders);
  }
  .feeds-column {
    width: 280px;
    @include background-color($color-base);
  }
  .inner-column {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
  }
  .entries-column {
    width: 380px;
    @media (max-width: 1300px) {
      width: 320px;
    }
  }
  .entry-column {
    flex-grow: 1;
  }
  &.show {
    display: flex !important;
  }
}

.app-panel {
  height: 100%;
  position: relative;
}
/* ... */

